--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Titre -->
 				<div class="col-12">
-					<h1>MIFMIF</h1>
+					<h1>GIRARD Arthur</h1>
 				</div>
 				<!-- Fin Titre -->
 
@@ -33,9 +33,9 @@
 					<nav class="nav">
 						<div class="container-fluid">
 							<ul class="nav">
-								<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Profil</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Presentation</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Experiences</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Formations</a></li>
 								<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
 							</ul>
 						</div>
